--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@wei/pluralize",
-  "version": "0.1.0-alpha.1",
+  "version": "8.0.1",
   "exports": "./mod.ts",
   "publish": {
     "include": [
